# selfma

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  Config.cmake.in  README.md  bld  clang-windows.cmake  note.md
core/: container.cpp  main.cpp  main.odl  main.ui  project.cpp  selfma.cpp  selfma_api.cpp  selfma_file.cpp
core/inc/: container.h  db_addapter.h  error_handler.h  ids_pool.h  project.h  selfma.h  selfma_api.h  selfma_file.h  task.h  waight.h
test/: test_container.cpp  test_project.c  test_project.cpp  test_selfma.cpp
test/runner/: test_project_runner.c  test_selfma.c  trun_container.c  trun_project.c  trun_selfma.c
